# AlfLibCpp

./: CMakeLists.txt  README.md
include/alflib/: alflib.hpp  allocator.hpp  assert.hpp  common.hpp  macros.hpp  platform.hpp  string.hpp  unique_pointer.hpp
include/alflib/collection/: array_list.hpp  array_map.hpp  map.hpp  robin_hood_map.hpp
include/alflib/core/: assert.hpp  buffer.hpp  console.hpp  dialog.hpp
include/alflib/file/: archive.hpp  file.hpp  file_io.hpp  path.hpp  result.hpp
include/alflib/graphics/: color.hpp  image.hpp  image_atlas.hpp
include/alflib/math/: math.hpp  matrix4f.hpp
include/alflib/memory/: allocator.hpp  memory.hpp  memory_reader.hpp  memory_writer.hpp  raw_memory_reader.hpp
include/alflib/platform/: detection.hpp  os.hpp  platform.hpp
source/alflib/: allocator.cpp  assert.cpp  string.cpp
source/alflib/core/: assert.cpp  buffer.cpp  dialog.cpp
source/alflib/debug/: debugger.cpp
source/alflib/file/: archive.cpp  file.cpp  file_io.cpp  path.cpp
source/alflib/graphics/: color.cpp  image.cpp
source/alflib/memory/: memory_reader.cpp  memory_writer.cpp  raw_memory_reader.cpp  raw_memory_writer.cpp
source/alflib/platform/: os.cpp
tests/: CMakeLists.txt  leak_check.sh  main.cpp  test_allocator.cpp  test_archive.cpp  test_array_list.cpp  test_array_map.cpp  test_file.cpp  test_image.cpp  test_image_atlas.cpp  test_mem_read_write.cpp  test_path.cpp  test_pointer.cpp  test_robin_hood_map.cpp  test_string.cpp
tests/res/: atlas.tga
tests/res/test/: smile.txt  some.txt  taping.tar
tests/res/test/untaped/: inside_tar.txt
